<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/app_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false" />
</LinearLayout>
